# e-commerce-back-django

./: .env  .gitignore  README.md  pyproject.toml
src/: urls.py
src/apps/auth/: urls.py  views.py
src/apps/categories/: models.py
src/apps/categories/api/: urls.py
src/apps/categories/api/serializers/: CategorySerializer.py
src/apps/categories/api/views/: CategoryListCreate.py  CategoryRetrieveUpdateDestroy.py
src/apps/categories/migrations/: 0001_initial.py  0002_alter_categorymodel_name.py
src/apps/products/: models.py
src/apps/products/api/: urls.py
src/apps/products/api/serializers/: ImageSerializer.py  ProductSerializer.py
src/apps/products/api/views/: ProductListCreate.py  ProductRetrieveUpdateDelete.py
src/apps/products/migrations/: 0001_initial.py
src/apps/users/: models.py
src/apps/users/api/: urls.py
src/apps/users/api/serializers/: PersonSerializer.py  UserSerializer.py
src/apps/users/api/views/: PassUpdate.py  (+4 more)
src/apps/users/enums/: UserRole.py
src/apps/users/fixtures/: UserAdmin.json
src/apps/users/migrations/: 0001_initial.py
src/common/auth/: customAuth.py  customBackend.py
src/common/models/: BaseModel.py
src/common/pagination/: Pagination.py
src/common/permissions/: roles.py
src/settings/: base.py  dev.py  prod.py
test/: test_setup.py
test/fixtures/: UserAdmin.json
test/productTest/: test_products.py
test/routes/: routes.py
tests/: test_setup.py
tests/categoryTest/: test_category.py
tests/fixtures/: UserAdmin.json
tests/routes/: routes.py
tests/userTest/: test_user.py  test_user_client.py
(+2 files in other folders)
